--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <!-- Card 1 -->
                     <article class="card card-1">
                         <div class="card-image-container">
-                            <img src="images/structure-to-chaos-reflection.jpg" alt="Executive reflection" class="card-bg" loading="lazy">
+                            <img src="Images/structure-to-chaos-reflection.jpg" alt="Executive reflection" class="card-bg" loading="lazy">
                             <div class="card-overlay"></div>
                         </div>
                         <div class="card-content">
@@ -75,7 +75,7 @@
                     <!-- Card 2 -->
                     <article class="card card-2">
                         <div class="card-image-container">
-                            <img src="images/founded-meculs-team.jpg" alt="Leadership team" class="card-bg" loading="lazy">
+                            <img src="Images/founded-meculs-team.jpg" alt="Leadership team" class="card-bg" loading="lazy">
                             <div class="card-overlay"></div>
                         </div>
                         <div class="card-content">
@@ -89,7 +89,7 @@
                     <!-- Card 3 -->
                     <article class="card card-3">
                         <div class="card-image-container">
-                            <img src="images/transformative-approach-coaching.jpg" alt="Executive coaching" class="card-bg" loading="lazy">
+                            <img src="Images/transformative-approach-coaching.jpg" alt="Executive coaching" class="card-bg" loading="lazy">
                             <div class="card-overlay"></div>
                         </div>
                         <div class="card-content">
@@ -105,7 +105,7 @@
                     <!-- Card 4 -->
                     <article class="card card-4">
                         <div class="card-image-container">
-                            <img src="images/insight-to-action-decisive.jpg" alt="Decisive action" class="card-bg" loading="lazy">
+                            <img src="Images/insight-to-action-decisive.jpg" alt="Decisive action" class="card-bg" loading="lazy">
                             <div class="card-overlay"></div>
                         </div>
                         <div class="card-content">
@@ -119,7 +119,7 @@
                     <!-- Card 5 -->
                     <article class="card card-5">
                         <div class="card-image-container">
-                            <img src="images/pathways-to-performance-teamwork.jpg" alt="Team performance" class="card-bg" loading="lazy">
+                            <img src="Images/pathways-to-performance-teamwork.jpg" alt="Team performance" class="card-bg" loading="lazy">
                             <div class="card-overlay"></div>
                         </div>
                         <div class="card-content">
@@ -133,7 +133,7 @@
                     <!-- Card 6 -->
                     <article class="card card-6">
                         <div class="card-image-container">
-                            <img src="images/integrated-methodology-simulation.webp" alt="Leadership simulation" class="card-bg" loading="lazy">
+                            <img src="Images/integrated-methodology-simulation.webp" alt="Leadership simulation" class="card-bg" loading="lazy">
                             <div class="card-overlay"></div>
                         </div>
                         <div class="card-content">
@@ -1365,63 +1365,145 @@
     <!-- ═══════════════════════════════════════════ -->
     <!-- SECTION 10 -->
     <!-- ═══════════════════════════════════════════ -->
-    <section class="meculs-blog">
-        <div class="container">
-            <div class="hero-text">
-                <h1>Unlocking the Potential of Those Who Advance the World</h1>
-            </div>
-
-            <div class="blog-carousel">
-                <!-- Card 1 -->
-                <div class="blog-card">
-                    <div class="blog-image">
-                        <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Global Trade & Supply Chain">
-                    </div>
-                    <div class="blog-content">
-                        <h3>Global Trade &amp; Supply Chain</h3>
-                        <p>As geopolitical tensions rise, how can leaders build resilient supply chains that thrive in uncertainty?</p>
-                    </div>
-                </div>
-
-                <!-- Card 2 -->
-                <div class="blog-card">
-                    <div class="blog-image">
-                        <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Artificial Intelligence">
-                    </div>
-                    <div class="blog-content">
-                        <h3>Artificial Intelligence</h3>
-                        <p>As AI investments surge, CEOs take the lead in shaping the future of intelligent organizations.</p>
-                    </div>
-                </div>
-
-                <!-- Card 3 -->
-                <div class="blog-card">
-                    <div class="blog-image">
-                        <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Sustainability & Energy">
-                    </div>
-                    <div class="blog-content">
-                        <h3>Sustainability &amp; Energy</h3>
-                        <p>The energy transition is accelerating — how can companies lead while balancing profitability and planet?</p>
-                    </div>
-                </div>
-
-                <!-- Card 4 -->
-                <div class="blog-card">
-                    <div class="blog-image">
-                        <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80" alt="Leadership & Transformation">
-                    </div>
-                    <div class="blog-content">
-                        <h3>Leadership &amp; Transformation</h3>
-                        <p>In times of disruption, the best leaders don't just adapt — they redefine what's possible.</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="carousel-nav">
-                <button class="nav-arrow prev">&lt;</button>
-                <button class="nav-arrow next">&gt;</button>
-            </div>
+    <section class="blog-section">
+    <div class="golden-divider"></div>
+    <div class="container">
+        <div class="section-header">
+            <div class="eyebrow">Insights &amp; Leadership</div>
+            <h2 class="section-title">Unlocking the Potential of Those Who Advance the World</h2>
+            <p class="section-subtitle">Perspectives on leadership effectiveness, behavioral clarity, and organizational transformation</p>
         </div>
+
+        <div class="carousel-wrapper">
+            <button class="carousel-nav-btn left" aria-label="Scroll left">&#8249;</button>
+            <div class="blog-carousel" id="blogCarousel">
+                <article class="article-card" style="--card-index: 0">
+                    <div class="article-image-container">
+                        <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?w=800&q=80" alt="Leadership transformation">
+                    </div>
+                    <div class="article-content">
+                        <div>
+                            <span class="article-tag">Executive Leadership</span>
+                            <div class="article-meta">ARTICLE | JANUARY 15, 2026</div>
+                            <h3 class="article-title">When Pressure Removes Pretence: Leadership Response in Crisis</h3>
+                            <p class="article-excerpt">How executive teams discover their true operational patterns when complexity and authority collide.</p>
+                        </div>
+                        <a href="#" class="read-more">Read Article</a>
+                    </div>
+                </article>
+
+                <article class="article-card" style="--card-index: 1">
+                    <div class="article-image-container">
+                        <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?w=800&q=80" alt="Decision making">
+                    </div>
+                    <div class="article-content">
+                        <div>
+                            <span class="article-tag">Behavioral Insight</span>
+                            <div class="article-meta">ARTICLE | JANUARY 10, 2026</div>
+                            <h3 class="article-title">The Architecture of Decision Clarity Under Ambiguity</h3>
+                            <p class="article-excerpt">Exploring how personality patterns shape decision-making frameworks in high-stakes environments.</p>
+                        </div>
+                        <a href="#" class="read-more">Read Article</a>
+                    </div>
+                </article>
+
+                <article class="article-card" style="--card-index: 2">
+                    <div class="article-image-container">
+                        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?w=800&q=80" alt="Team collaboration">
+                    </div>
+                    <div class="article-content">
+                        <div>
+                            <span class="article-tag">Organizational Impact</span>
+                            <div class="article-meta">ARTICLE | JANUARY 8, 2026</div>
+                            <h3 class="article-title">From Awareness to Response Practice: The New Leadership Development</h3>
+                            <p class="article-excerpt">Why leadership transformation must move beyond insight into repeated, observable behavioral change.</p>
+                        </div>
+                        <a href="#" class="read-more">Read Article</a>
+                    </div>
+                </article>
+
+                <article class="article-card" style="--card-index: 3">
+                    <div class="article-image-container">
+                        <img src="https://images.unsplash.com/photo-1556761175-b413da4baf72?w=800&q=80" alt="Coaching methodology">
+                    </div>
+                    <div class="article-content">
+                        <div>
+                            <span class="article-tag">Methodology</span>
+                            <div class="article-meta">ARTICLE | JANUARY 5, 2026</div>
+                            <h3 class="article-title">Personality-Driven Coaching Architecture</h3>
+                            <p class="article-excerpt">The proprietary framework that surfaces personality patterns and builds deliberate response under pressure.</p>
+                        </div>
+                        <a href="#" class="read-more">Read Article</a>
+                    </div>
+                </article>
+
+                <article class="article-card" style="--card-index: 4">
+                    <div class="article-image-container">
+                        <img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf?w=800&q=80" alt="Executive presence">
+                    </div>
+                    <div class="article-content">
+                        <div>
+                            <span class="article-tag">Leadership Development</span>
+                            <div class="article-meta">ARTICLE | JANUARY 3, 2026</div>
+                            <h3 class="article-title">Authority Without Role Dependency</h3>
+                            <p class="article-excerpt">How leaders develop executive presence independent of title, position, or organizational structure.</p>
+                        </div>
+                        <a href="#" class="read-more">Read Article</a>
+                    </div>
+                </article>
+
+                <article class="article-card" style="--card-index: 5">
+                    <div class="article-image-container">
+                        <img src="https://images.unsplash.com/photo-1573164713714-d95e436ab8d6?w=800&q=80" alt="Transformation journey">
+                    </div>
+                    <div class="article-content">
+                        <div>
+                            <span class="article-tag">Case Study</span>
+                            <div class="article-meta">ARTICLE | DECEMBER 28, 2025</div>
+                            <h3 class="article-title">Recalibrating C-Suite Response Patterns</h3>
+                            <p class="article-excerpt">A deep dive into how personality-driven coaching transformed executive decision-making in a global pharmaceutical organization.</p>
+                        </div>
+                        <a href="#" class="read-more">Read Article</a>
+                    </div>
+                </article>
+
+                <article class="article-card" style="--card-index: 6">
+                    <div class="article-image-container">
+                        <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?w=800&q=80" alt="Team strategy">
+                    </div>
+                    <div class="article-content">
+                        <div>
+                            <span class="article-tag">Strategy</span>
+                            <div class="article-meta">ARTICLE | DECEMBER 20, 2025</div>
+                            <h3 class="article-title">Building Response Clarity in Cross-Functional Teams</h3>
+                            <p class="article-excerpt">How immersive simulations reveal communication breakdowns and build coordinated response capabilities.</p>
+                        </div>
+                        <a href="#" class="read-more">Read Article</a>
+                    </div>
+                </article>
+
+                <article class="article-card" style="--card-index: 7">
+                    <div class="article-image-container">
+                        <img src="https://images.unsplash.com/photo-1551836022-d5d88e9218df?w=800&q=80" alt="Performance metrics">
+                    </div>
+                    <div class="article-content">
+                        <div>
+                            <span class="article-tag">Measurement</span>
+                            <div class="article-meta">ARTICLE | DECEMBER 15, 2025</div>
+                            <h3 class="article-title">The Observable Metrics of Leadership Transformation</h3>
+                            <p class="article-excerpt">Moving beyond self-assessment to measure real behavioral change in organizational contexts.</p>
+                        </div>
+                        <a href="#" class="read-more">Read Article</a>
+                    </div>
+                </article>
+            </div>
+            <button class="carousel-nav-btn right" aria-label="Scroll right">&#8250;</button>
+        </div>
+
+        <div class="blog-controls">
+            <a href="insights.html" class="view-all-btn">View All Insights</a>
+        </div>
+    </div>
     </section>
 
     <!-- ═══════════════════════════════════════════ -->
